[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/ui/menu_icons/button_pressed.png" type="Texture" id=1]
[ext_resource path="res://ui/build_menu.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/menu_icons/button.png" type="Texture" id=3]

[node name="BuildMenu" type="MarginContainer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -82.0
margin_top = -27.0
margin_bottom = 27.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Categories" type="VBoxContainer" parent="."]
margin_right = 82.0
margin_bottom = 54.0
custom_constants/separation = 2

[node name="Houses" type="HBoxContainer" parent="Categories"]
margin_right = 82.0
margin_bottom = 26.0
custom_constants/separation = 2
alignment = 2

[node name="Menu" type="HBoxContainer" parent="Categories/Houses"]
visible = false
margin_right = 54.0
margin_bottom = 26.0
custom_constants/separation = 2
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WoodenHouse" type="TextureButton" parent="Categories/Houses/Menu"]
margin_right = 26.0
margin_bottom = 26.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StoneHouse" type="TextureButton" parent="Categories/Houses/Menu"]
margin_left = 28.0
margin_right = 54.0
margin_bottom = 26.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Toggle" type="TextureButton" parent="Categories/Houses"]
margin_left = 56.0
margin_right = 82.0
margin_bottom = 26.0
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )

[node name="Infrastructure" type="HBoxContainer" parent="Categories"]
margin_top = 28.0
margin_right = 82.0
margin_bottom = 54.0
custom_constants/separation = 2
alignment = 2

[node name="Menu" type="HBoxContainer" parent="Categories/Infrastructure"]
visible = false
margin_left = 28.0
margin_right = 54.0
margin_bottom = 26.0
alignment = 2

[node name="DirtRoad" type="TextureButton" parent="Categories/Infrastructure/Menu"]
margin_right = 26.0
margin_bottom = 26.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Toggle" type="TextureButton" parent="Categories/Infrastructure"]
margin_left = 56.0
margin_right = 82.0
margin_bottom = 26.0
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )
[connection signal="button_up" from="Categories/Houses/Menu/WoodenHouse" to="." method="_on_wooden_house_button_up"]
[connection signal="button_up" from="Categories/Houses/Menu/StoneHouse" to="." method="_on_stone_house_button_up"]
[connection signal="toggled" from="Categories/Houses/Toggle" to="." method="_on_houses_btn_toggled"]
[connection signal="button_up" from="Categories/Infrastructure/Menu/DirtRoad" to="." method="_on_dirt_road_button_up"]
[connection signal="toggled" from="Categories/Infrastructure/Toggle" to="." method="_on_infra_btn_toggled"]
